--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.3.4'
     //implementation 'com.google.android.material:material:1.2.0'
     implementation 'com.google.android.material:material:1.2.1' // Reemplaza con la versión deseada
-    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+   // implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
 
     // Reemplaza con la versión correcta
 
